# defopt-stubs

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
stubs/defopt/: __init__.pyi
stubs/defopt-stubs/: __init__.pyi
tests/: test_script.py
